<resources>
    <string name="app_name">saloon_Version_0</string>
    <string name="order_details">Order Details</string>
    <string name="order_summary">Order Summary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hair_styles"><![CDATA[Hair & Styles]]></string>
    <string name="client_barber_com">client@barber.com</string>
    <string name="manicure_amp_pedicure"><![CDATA[Manicure & Pedicure]]></string>
    <string name="makeup">MakeUp</string>
    <string name="mehandi">Mehandi</string>
    <string name="threading">Threading</string>
    <string name="waxing">Waxing</string>
    <string name="bleach">Bleach</string>
    <string name="facial">Facial</string>
    <string name="hair_straightening">Hair Straightening</string>
    <string name="body_spa">Body Spa</string>
    <string name="hair_amp_style"><![CDATA[Hair & Style]]></string>
    <string name="color_hair">Color Hair</string>
    <string name="beauty_treatment">Beauty Treatment</string>
    <string name="detan_bleach">Detan Bleach</string>
    <string name="body_rituals">Body Rituals</string>
    <string name="hair_treatment">Hair Treatment</string>
    <string name="hair_spa">Hair Spa</string>
    <string name="hair_cutting">Hair Cutting</string>
    <string name="_400">₹ 400</string>
    <string name="add">Add</string>
    <string name="book_appointement">Book Appointement</string>
    <string name="branch_name">Branch Name</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date</string>
    <string name="time_slot">Time Slot</string>
    <string name="_351">₹351</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="cancel">Cancel</string>
    <string name="appointement">Appointement</string>
    <string name="_23_02_2023">23.02.2023</string>
    <string name="remove">remove</string>
</resources>