<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/linear"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/book_appointement"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear1"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/linear2"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txt_orderid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="15sp"
                            android:padding="5dp"
                            android:text="@string/branch_name" />

                        <TextView
                            android:id="@+id/tvTimeSlot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="15sp"
                            android:padding="5dp"
                            android:text="@string/time_slot" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear3"
                        android:layout_marginLeft="215dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Spinner
                            android:id="@+id/spinner0"
                            android:gravity="center|right"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <Spinner
                            android:id="@+id/spinner1"
                            android:gravity="center|right"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="15sp"
                            android:padding="5dp"
                            android:text="@string/date" />

                        <TextView
                            android:id="@+id/showText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <Button
                            android:id="@+id/button"
                            android:textSize="12sp"
                            android:gravity="center|right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_date"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="15sp"
                            android:padding="5dp"
                            android:text="Total" />

                        <TextView
                            android:id="@+id/txt_total"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            android:padding="8dp"
                            android:textSize="15sp"
                            android:text="@string/_351"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnConfirmBooking"
                        android:onClick="confirmBooking"
                        android:text="@string/confirm_booking"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:backgroundTint="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/btnCancel"
                        android:onClick="cancel"
                        android:text="@string/cancel"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:backgroundTint="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>